--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
-DB_USER=votre_nom_utilisateur
-DB_PASSWORD=votre_mot_de_passe
-DB_NAME=dating_app
-DB_HOST=localhost
-JWT_SECRET=une_chaine_secrete
+DB_URL=mysql://user:password@localhost:3306/database_name
+JWT_SECRET=your_jwt_secret
