--- a/package.json
+++ b/package.json
@@ -1,4 +1,18 @@
-"dependencies": {
-  "express": "^4.18.1",
-  ...
+{
+  "name": "dev-web-back-end",
+  "version": "1.0.0",
+  "description": "A backend project",
+  "main": "server.js",
+  "dependencies": {
+    "express": "^4.18.1",
+    "sequelize": "^6.10.0",
+    "mysql2": "^2.3.3",
+    "dotenv": "^10.0.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "start": "node server.js"
+  },
+  "author": "",
+  "license": "ISC"
 }
