--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
-  "name": "dev-web-back-end",
+  "name": "nom-du-projet",
   "version": "1.0.0",
-  "description": "A backend project",
+  "description": "",
   "main": "server.js",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "dotenv": "^10.0.0",
-    "express": "^4.18.1",
-    "express-validator": "^7.2.0",
-    "jsonwebtoken": "^9.0.2",
-    "mysql2": "^2.3.3",
-    "sequelize": "^6.10.0"
-  },
   "scripts": {
     "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
